Fixed icons not visible

--- a/css/home.sass
+++ b/css/home.sass
@@ -57,9 +57,9 @@ body.eight
             cursor: pointer
             opacity: 0.8
             &.clear
-                background-image: url("/8/ic_clear_white_48px.svg")
+                background-image: url("../8/ic_clear_white_48px.svg")
             &.done
-                background-image: url("/8/ic_done_white_48px.svg")
+                background-image: url("../8/ic_done_white_48px.svg")
             &:hover
                 background-color: rgba(255, 255, 255, 0.12)
             &:active
